fix BitEnumSet to work with Java 11 by not using SharedSecrets